# dtwin

./: .gitignore  .vercelignore  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
config/: config.yaml  scenarios.example.yaml  stations.generated.yaml
scripts/: calibrate_barley_model.py  calibrate_pea_model.py  calibrate_process_model.py  calibrate_wheat_model.py  discover_stations.py  forecast.py  forecast_ui.py  run_advisory.py  run_barley_advisory.py  run_barley_model.py  run_pea_advisory.py  run_pea_model.py  run_process_model.py  run_simulation.py  run_wheat_advisory.py  run_wheat_model.py  train_yield_model.py  validate_barley_subprovincial.py  validate_pea_subprovincial.py  validate_subprovincial.py  validate_wheat_subprovincial.py
src/canola_dt/: __init__.py  barley_calibration.py  barley_subprovincial.py  calibration.py  config.py  constants.py  features.py  fertility.py  pea_calibration.py  pea_subprovincial.py  scenario.py  subprovincial.py  training.py  webapp.py  wheat_calibration.py  wheat_subprovincial.py
src/canola_dt/advisory/: __init__.py  agronomy.py  (+11 more)
tests/: test_advisory.py  test_agromet.py  test_barley_advisory.py  test_barley_model.py  test_barley_subprovincial.py  test_calibration.py  test_data.py  test_features.py  test_nasapower.py  test_pea_advisory.py  test_pea_model.py  test_pea_subprovincial.py  test_phenology.py  test_process_model.py  test_scenario.py  test_subprovincial.py  test_twin.py  test_webapp.py  test_wheat_advisory.py  test_wheat_fertility.py  test_wheat_model.py  test_wheat_subprovincial.py
(+18 files in other folders)
